app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --font-geist-sans: "Fredoka", system-ui, sans-serif;
  --font-geist-mono: "JetBrains Mono", monospace;
  --mowing-green: #265C4B;
  --par-3-punch: #49C184;
  --golden-tee: #FFD25E;
  --off-white-pique: #FDFCF5;
  --divot-pink: #FF8A8A;
}

body {
  background-color: var(--off-white-pique);
  color: var(--mowing-green);
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
  .animate-fade-in {
    animation: fadeIn 0.2s ease-out forwards;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

